src/Infrastructure/K8S/my-list-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-list-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: my-list-ingress
spec:
  rules:
  - host: identitytestes1
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: identity-api-service
            port: 
              number: 80
